Titles and MathJax in html_node manual
The node by node HTML manual produced by Texinfo doesn't actually have
a title on each html. So the random reader (who comes in through a
search engine) will have no idea what this page is!!! So I added
titles in the start of these pages. I also added links to the other
formats of the manual in the bottom of the page and also to the main
Gnuastro webpage.

The manual extensively uses equations. So I included MathJax in the
pages that have equations so they are displayed nicely. I also added a
javascript.html page that lists the Javascript codes, sources and
licences that were used in Gnuastro's webpage to comply with tools
like LibreJS.

--- a/doc/gnuastro.texi
+++ b/doc/gnuastro.texi
@@ -591,9 +591,9 @@ based on the experience they have gained by frequently using it. This
 kind of subjective experience is prone to very serious
 mis-understandings about what it really does behind the scenes and can
 be misleading. This attitude is further encouraged through non-free
-software@footnote{@url{https://www.gnu.org/philosophy/free-sw.html}}. This
-approach to scientific software only helps in producing dogmas and an
-``obscurantist faith in the expert’s special skill, and in his
+software@footnote{@url{https://www.gnu.org/philosophy/free-sw.html}}.
+This approach to scientific software only helps in producing dogmas
+and an ``obscurantist faith in the expert’s special skill, and in his
 personal knowledge and authority''@footnote{Karl Popper. The logic of
 scientific discovery. 1959. Larger quote is given at the start of the
 PDF manual.}.
