Gnuastro project webpage activated and explained
The issues and trackers in the Gnuastro project webpage are now
activated and ready for use. In its self this is independent of this
repository changes, but its effects on the tracked files are the
following:

1. Added several sections to the manual (e.g., Report a bug, Suggest
new feature, Announcements and Gnuastro project webpage).

2. Removed the sub-sections titled (`future plans for ProgramName' or
something else) from the manual. These are now followed on the project
webpage.

In the doc/forwebpage.sh, the border=1 in the HTML cartouche was
removed, so only its background color can separate it from the rest of
the text.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2015-04-21  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* doc/gnuastro.texi: Removed all "Future updates ..." subsections
+	in the manual. They are now managed in the Gnuastro project
+	webpage on Savannah.
+
 2015-04-13  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* lib/fitsarrayvv.c (updatekeys): When no value is given, it will
