`(dir)' link in webpage corrected, minor corrections
In the top HTML pages (./manual/gnuastro.html and
./manual/html_node/index.html), the link `(dir)' would link to
non-existing places: `dir.html' and `../dir/index.html'. So I wrote a
simple SED script to set these two locations to the
./manual/index.html page.

In Circumference mode of MakeProfiles, when the profile was highly
elongated, the one pixel width circumference would not show near the
minor axis. To correct for this, when the truncation radius is reached
in this mode, instead of ignoring the pixel, it is filled in this mode
(for a circumference).

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2015-04-24  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/mkprof/oneprofile.c (makepixbypix): When in circumference
+	mode, if the truncation radius is reached, it is filled with the
+	profile value. This is done so very elongated profiles can at
+	least show a one pixel circumference.
+
+	* src/mkprof/main.h (MINCIRCUMWIDTH): Changed to 0.5f.
+
+	* lib/checkset.c (doublelvalue): Corrected bad value report when
+	options are called.
+
 2015-04-21  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/mkprof/ui.c (freeandreport): Avoided double-free by only
